styles/style.css
/* ... */
/* ? Stack on Tablet Screen */

@media only screen and (min-width: 768px) and (min-width: 601px) {
  .stack {
    height: auto;
    margin: 50px 0px 0px 0px;
    position: static;
  }

  .stack h1 {
    font-size: 3rem;
  }

  #about.stack-class {
    width: 100%;
    border: 1px solid rgba(0, 0, 0, 0.1);
  }

  .stack > #about {
    padding: 10px;
    margin: 0px 0px 50px 0px;
  }

  li span {
    font-size: 1.3rem;
  }

  /* ! Tablet Grid test */

  .grid {
    display: grid;
    grid-template-columns: auto auto auto auto;
    gap: 10px;
    padding: 10px;
  }
}

/* ! Projects */

.projects h1 {
  margin: 10px 0px 10px 0px;
}

.projects {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.project-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* padding: 50px; */
  border: 1px solid rgba(0, 0, 0, 0.1);
  width: calc(100% / 1.7);
  padding: 20px 0px;
  background-color: rgba(0, 0, 0, 0.1);
}

.projects-col-one {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 20px;
  /* height: 30%; */
}

.projects-col-two {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 20px;
  /* height: 30%; */
  /* width: 100%; */
}

.proj {
  width: calc(100% / 2.5 - 30px);
  border: 1px solid rgba(0, 0, 0, 0.1);
  margin-bottom: 0px;
  padding: 20px;
  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.2);
  background-color: rgba(255, 255, 255, 1);
}

.proj h4 {
  margin-top: 5px;
  font-size: 0.8rem;
}

h4 span {
  border-radius: 0px;
  border: 1px solid rgba(0, 0, 0, 0.2);
  padding: 5px 15px 5px 15px;
}

.proj img {
  max-width: 100%;
  margin-bottom: 10px;
  /* max-height: calc(100% / 2 - 30px); */
  /* max-height: 20%; */
  border: 1px solid rgba(0, 0, 0, 0.1);
}

/* ? Projects on Phone Screen */

@media only screen and (max-width: 600px) {
  .projects h1 {
    margin: 10px 0px 20px 0px;
  }

  .projects {
    height: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .project-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 1px solid rgba(0, 0, 0, 0.1);
    width: 100%;
    padding: 20px 0px;
    background-color: rgba(0, 0, 0, 0.1);
  }

  .projects-col-one {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    padding: 0px 10px;
  }

  .projects-col-two {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    padding: 0px 10px;
  }

  .proj {
    width: 100%;
    margin-bottom: 10px;
    padding: 20px;
    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
  }

  .proj h4 {
    margin-top: 5px;
    font-size: 0.8rem;
  }

  h4 span {
    border-radius: 0px;
    border: 1px solid rgba(0, 0, 0, 0.2);
    padding: 5px 15px 5px 15px;
    margin: 10px 0px 10px 0px;
  }

  .proj img {
    max-width: 100%;
    margin-bottom: 10px;
    border: 1px solid rgba(0, 0, 0, 0.1);
  }
}

/* ! Popups */

#popup-container {
  visibility: hidden;
  opacity: 0;
  margin: 0 auto;
  position: fixed;
  height: 100vh;
  width: 100%;
  /* display: none; */
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.3);
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(10px);
  /* z-index: -222222; */
}

.popup {
  position: fixed;
  /* z-index: -222222; */
  visibility: hidden;
  border: 1px solid;
  width: calc(100% / 1.2);
  display: flex;
  justify-content: space-around;
  flex-direction: row;
  padding: 40px;
  background-color: rgb(255, 255, 255);
}

#project-4 {
  visibility: hidden;
  opacity: 0;
  transform: scaleX(0.8) scaleY(0.8);
}

#project-3 {
  visibility: hidden;
  opacity: 0;
  transform: scaleX(0.8) scaleY(0.8);
}

#project-2 {
  visibility: hidden;
  opacity: 0;
  transform: scaleX(0.8) scaleY(0.8);
}

#project-1 {
  visibility: hidden;
  opacity: 0;
  transform: scaleX(0.8) scaleY(0.8);
}

.img-container {
  width: 50%;
}

.img-container img {
  width: 100%;
  /* min-width: 100%; */
  border: 1px solid rgba(0, 0, 0, 0.1);
}

.popup-text {
  width: 50%;
  border-left: 1px solid rgba(0, 0, 0, 0.5);
  padding: 0px 0px 0px 40px;
  margin: 0px 0px 0px 60px;
}

.popup-text p {
  font-size: 1rem;
  margin: 20px 0px 20px 0px;
}

.popup-link {
  margin: 40px 0px 0px 0px;
}

.popup-link a {
  border: 1px solid;
  padding: 10px;
  margin: 0px 20px 0px 0px;
}

/* ? Popups on Phone Screen */

@media only screen and (max-width: 600px) {
  #popup-container {
    margin: 0 auto;
    height: 100vh;
    width: 100%;
    overflow: scroll;
  }
  
  .popup {
    top: 10px;
    margin: 0px 0px 0px 0px;
    border: 1px solid rgba(0, 0, 0, 0.5);
    width: calc(100% / 1.1);
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 15px 15px 16px 15px;
  }
  
  .img-container {
    width: 100%;
  }
  
  .popup-text {
    width: 100%;
    border-left: none;
    padding: 0 0 0 0;
    margin: 15px 0px 0px 0px;
  }
  
  .popup-text p {
    font-size: 1.2rem;
    margin: 15px 0px 0px 0px;
  }
  
  .popup-link {
    margin: 40px 0px 20px 0px;
  }
  
  .popup-link a {
    margin: 0px 20px 0px 0px;
  }
}

/* ! */

/* More Section */

.bottom {
  height: 100vh;
  background-color: rgba(255, 255, 255, 1);
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-direction: row;
  /* border-top: 1px solid rgba(0, 0, 0, 0.5); */
  padding: 0px;
}

div#bottom {
  margin: 40px;
}

#more {
  /* padding: 40px; */
  margin: 20px;
  width: calc(100% / 2);
  /* box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.5); */
  /* display: flex;
  justify-content: space-around;
  align-items: center;
  flex-direction: column; */
  border-radius: 0px;
  /* box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.2); */
}
/* ... */

